Update campaign port

--- a/data/base/wrf/cam1/cam1a/labels.ini
+++ b/data/base/wrf/cam1/cam1a/labels.ini
@@ -80,11 +80,6 @@ label =	"scav2soundpos"
 pos = 1600, 1728
 label =	"scav3soundpos"
 
-[area_0]
-pos1 = 128, 128
-pos2 = 7744, 7744
-label = "enemy1Start"
-
 [area_1]
 pos1 = 3392,576
 pos2 = 3904,1088
@@ -103,7 +98,8 @@ label = "landingZone"
 [area_4]
 pos1 = 2496, 6080
 pos2 = 4928, 7232
-label = "launchScavAttack"
+label = "LaunchScavAttack"
+player = 0
 
 [area_5]
 pos1 = 3520, 4416
@@ -124,6 +120,12 @@ label = "scavbase3area"
 pos1 = 1472, 3776
 pos2 = 2752, 5440
 label = "scavbase4area"
+
+[area_9]
+pos1 = 4416, 6336
+pos2 = 5696, 7232
+label = "ScavAttack1"
+player = 0
 
 [object_0]
 id = 8
