--- a/data/base/wrf/cam1/cam1a/labels.ini
+++ b/data/base/wrf/cam1/cam1a/labels.ini
@@ -182,7 +182,7 @@ members = 8, 7, 927, 802, 800
 [group_2]
 label = "scavgroup3"
 player = 6
-members = 923, 840, 845, 31, 39, 856, 853, 854
+members = 923, 840, 845, 31, 39, 20
 
 [group_3]
 label = "scavgroup4"
