Upgrades: Convert body upgrades to new system whereby upgrades are stored uniquely for each body, and are set in scripts based on hints rather than in the ini files directly.

--- a/data/mp/stats/research.ini
+++ b/data/mp/stats/research.ini
@@ -115,7 +115,7 @@ iconID = IMAGE_RES_CYBORGTECH
 imdName = icamrhot.pie
 subgroupIconID = IMAGE_RES_GRPUPG
 requiredResearch = R-Cyborg-Armor-Heat06
-resultFunctions = Cyborg-Armor-Heat07
+results = "Cyborgs:Thermal:45"
 
 [R-Cyborg-Armor-Heat08]
 name = "Cyborg Superdense Thermal Armor Mk2"
@@ -126,7 +126,7 @@ iconID = IMAGE_RES_CYBORGTECH
 imdName = icamrhot.pie
 subgroupIconID = IMAGE_RES_GRPUPG
 requiredResearch = R-Cyborg-Armor-Heat07
-resultFunctions = Cyborg-Armor-Heat08
+results = "Cyborgs:Thermal:45"
 
 [R-Cyborg-Armor-Heat09]
 name = "Cyborg Superdense Thermal Armor Mk3"
@@ -137,7 +137,7 @@ iconID = IMAGE_RES_CYBORGTECH
 imdName = icamrhot.pie
 subgroupIconID = IMAGE_RES_GRPUPG
 requiredResearch = R-Cyborg-Armor-Heat08
-resultFunctions = Cyborg-Armor-Heat09
+results = "Cyborgs:Thermal:45"
 
 [R-Vehicle-Armor-Heat07]
 name = "Vehicle Superdense Thermal Armor"
@@ -148,7 +148,7 @@ iconID = IMAGE_RES_DROIDTECH
 imdName = icamrhot.pie
 subgroupIconID = IMAGE_RES_GRPUPG
 requiredResearch = R-Vehicle-Armor-Heat06
-resultFunctions = Vehicle-Armor-Heat07
+results = "Droids:Thermal:40"
 
 [R-Vehicle-Armor-Heat08]
 name = "Vehicle Superdense Thermal Armor Mk2"
@@ -159,7 +159,7 @@ iconID = IMAGE_RES_DROIDTECH
 imdName = icamrhot.pie
 subgroupIconID = IMAGE_RES_GRPUPG
 requiredResearch = R-Vehicle-Armor-Heat07
-resultFunctions = Vehicle-Armor-Heat08
+results = "Droids:Thermal:40"
 
 [R-Vehicle-Armor-Heat09]
 name = "Vehicle Superdense Thermal Armor Mk3"
@@ -170,7 +170,7 @@ iconID = IMAGE_RES_DROIDTECH
 imdName = icamrhot.pie
 subgroupIconID = IMAGE_RES_GRPUPG
 requiredResearch = R-Vehicle-Armor-Heat08
-resultFunctions = Vehicle-Armor-Heat09
+results = "Droids:Thermal:40"
 
 [R-Sys-MobileRepairTurretHvy]
 name = "Heavy Repair Turret"
@@ -759,7 +759,7 @@ iconID = IMAGE_RES_DROIDTECH
 imdName = iceng.pie
 subgroupIconID = IMAGE_RES_GRPUPG
 requiredResearch = R-Sys-Engineering01
-resultFunctions = Vehicle-Engine01
+results = "Droids:Power:5"
 
 [R-Vehicle-Engine02]
 name = "Fuel Injection Engine Mk2"
@@ -771,7 +771,7 @@ iconID = IMAGE_RES_DROIDTECH
 imdName = iceng.pie
 subgroupIconID = IMAGE_RES_GRPUPG
 requiredResearch = R-Vehicle-Engine01
-resultFunctions = Vehicle-Engine02
+results = "Droids:Power:5"
 
 [R-Vehicle-Engine03]
 name = "Fuel Injection Engine Mk3"
@@ -783,7 +783,7 @@ iconID = IMAGE_RES_DROIDTECH
 imdName = iceng.pie
 subgroupIconID = IMAGE_RES_GRPUPG
 requiredResearch = R-Vehicle-Engine02
-resultFunctions = Vehicle-Engine03
+results = "Droids:Power:5"
 
 [R-Wpn-Flamer-Damage01]
 name = "High Temperature Flamer Gel"
@@ -1109,7 +1109,7 @@ iconID = IMAGE_RES_DROIDTECH
 imdName = icmolql.pie
 subgroupIconID = IMAGE_RES_GRPUPG
 requiredResearch = R-Struc-Factory-Module,R-Struc-Research-Module
-resultFunctions = Vehicle-Metals01
+results = "Droids:Armour:30", "Droids:HitPoints:30"
 
 [R-Vehicle-Metals02]
 name = "Composite Alloys Mk2"
@@ -1120,7 +1120,7 @@ iconID = IMAGE_RES_DROIDTECH
 imdName = icmolql.pie
 subgroupIconID = IMAGE_RES_GRPUPG
 requiredResearch = R-Vehicle-Metals01
-resultFunctions = Vehicle-Metals02
+results = "Droids:Armour:30", "Droids:HitPoints:30"
 
 [R-Vehicle-Metals03]
 name = "Composite Alloys Mk3"
@@ -1132,7 +1132,7 @@ iconID = IMAGE_RES_DROIDTECH
 imdName = icmolql.pie
 subgroupIconID = IMAGE_RES_GRPUPG
 requiredResearch = R-Vehicle-Metals02
-resultFunctions = Vehicle-Metals03
+results = "Droids:Armour:30", "Droids:HitPoints:30"
 
 [R-Struc-Research-Upgrade01]
 name = "Synaptic Link Data Analysis"
@@ -1145,6 +1145,7 @@ imdName = blresch4.PIE
 subgroupIconID = IMAGE_RES_GRPUPG
 requiredResearch = R-Struc-Research-Module
 resultFunctions = Struc-Research-Upgrade01
+results = "ResearchPoints:30"
 
 [R-Struc-Research-Upgrade02]
 name = "Synaptic Link Data Analysis Mk2"
@@ -1156,6 +1157,7 @@ imdName = blresch4.PIE
 subgroupIconID = IMAGE_RES_GRPUPG
 requiredResearch = R-Struc-Research-Upgrade01
 resultFunctions = Struc-Research-Upgrade02
+results = "ResearchPoints:30"
 
 [R-Struc-Research-Upgrade03]
 name = "Synaptic Link Data Analysis Mk3"
@@ -1167,6 +1169,7 @@ imdName = blresch4.PIE
 subgroupIconID = IMAGE_RES_GRPUPG
 requiredResearch = R-Struc-Research-Upgrade02
 resultFunctions = Struc-Research-Upgrade03
+results = "ResearchPoints:30"
 
 [R-Struc-Factory-Upgrade01]
 name = "Automated Manufacturing"
@@ -1189,7 +1192,7 @@ iconID = IMAGE_RES_CYBORGTECH
 imdName = icmolql.pie
 subgroupIconID = IMAGE_RES_GRPUPG
 requiredResearch = R-Struc-Factory-Module,R-Struc-Research-Module
-resultFunctions = Cyborg-Metals01
+results = "Cyborgs:Armour:35", "Cyborgs:HitPoints:35"
 
 [R-Cyborg-Metals02]
 name = "Cyborg Composite Alloys Mk2"
@@ -1200,7 +1203,7 @@ iconID = IMAGE_RES_CYBORGTECH
 imdName = icmolql.pie
 subgroupIconID = IMAGE_RES_GRPUPG
 requiredResearch = R-Cyborg-Metals01
-resultFunctions = Cyborg-Metals02
+results = "Cyborgs:Armour:35", "Cyborgs:HitPoints:35"
 
 [R-Cyborg-Metals03]
 name = "Cyborg Composite Alloys Mk3"
@@ -1211,7 +1214,7 @@ iconID = IMAGE_RES_CYBORGTECH
 imdName = icmolql.pie
 subgroupIconID = IMAGE_RES_GRPUPG
 requiredResearch = R-Cyborg-Metals02
-resultFunctions = Cyborg-Metals03
+results = "Cyborgs:Armour:35", "Cyborgs:HitPoints:35"
 
 [R-Wpn-Rocket03-HvAT]
 name = "Bunker Buster Rocket"
@@ -1683,7 +1686,7 @@ iconID = IMAGE_RES_CYBORGTECH
 imdName = icmolql.pie
 subgroupIconID = IMAGE_RES_GRPUPG
 requiredResearch = R-Cyborg-Metals03,R-Struc-Research-Upgrade04
-resultFunctions = Cyborg-Metals04
+results = "Cyborgs:Armour:35", "Cyborgs:HitPoints:35"
 
 [R-Cyborg-Metals05]
 name = "Cyborg Dense Composite Alloys Mk2"
@@ -1694,7 +1697,7 @@ iconID = IMAGE_RES_CYBORGTECH
 imdName = icmolql.pie
 subgroupIconID = IMAGE_RES_GRPUPG
 requiredResearch = R-Cyborg-Metals04
-resultFunctions = Cyborg-Metals05
+results = "Cyborgs:Armour:35", "Cyborgs:HitPoints:35"
 
 [R-Cyborg-Metals06]
 name = "Cyborg Dense Composite Alloys Mk3"
@@ -1705,7 +1708,7 @@ iconID = IMAGE_RES_CYBORGTECH
 imdName = icmolql.pie
 subgroupIconID = IMAGE_RES_GRPUPG
 requiredResearch = R-Cyborg-Metals05
-resultFunctions = Cyborg-Metals06
+results = "Cyborgs:Armour:35", "Cyborgs:HitPoints:35"
 
 [R-Cyborg-Metals07]
 name = "Cyborg Superdense Composite Alloys"
@@ -1716,7 +1719,7 @@ iconID = IMAGE_RES_CYBORGTECH
 imdName = icmolql.pie
 subgroupIconID = IMAGE_RES_GRPUPG
 requiredResearch = R-Cyborg-Metals06
-resultFunctions = Cyborg-Metals07
+results = "Cyborgs:Armour:35", "Cyborgs:HitPoints:35"
 
 [R-Cyborg-Metals08]
 name = "Cyborg Superdense Composite Alloys Mk2"
@@ -1727,7 +1730,7 @@ iconID = IMAGE_RES_CYBORGTECH
 imdName = icmolql.pie
 subgroupIconID = IMAGE_RES_GRPUPG
 requiredResearch = R-Cyborg-Metals07
-resultFunctions = Cyborg-Metals08
+results = "Cyborgs:Armour:35", "Cyborgs:HitPoints:35"
 
 [R-Cyborg-Metals09]
 name = "Cyborg Superdense Composite Alloys Mk3"
@@ -1738,7 +1741,7 @@ iconID = IMAGE_RES_CYBORGTECH
 imdName = icmolql.pie
 subgroupIconID = IMAGE_RES_GRPUPG
 requiredResearch = R-Cyborg-Metals08
-resultFunctions = Cyborg-Metals09
+results = "Cyborgs:Armour:35", "Cyborgs:HitPoints:35"
 
 [R-Vehicle-Metals04]
 name = "Dense Composite Alloys"
@@ -1749,7 +1752,7 @@ iconID = IMAGE_RES_DROIDTECH
 imdName = icmolql.pie
 subgroupIconID = IMAGE_RES_GRPUPG
 requiredResearch = R-Struc-Research-Upgrade04,R-Vehicle-Metals03
-resultFunctions = Vehicle-Metals04
+results = "Droids:Armour:30", "Droids:HitPoints:30"
 
 [R-Vehicle-Metals05]
 name = "Dense Composite Alloys Mk2"
@@ -1760,7 +1763,7 @@ iconID = IMAGE_RES_DROIDTECH
 imdName = icmolql.pie
 subgroupIconID = IMAGE_RES_GRPUPG
 requiredResearch = R-Vehicle-Metals04
-resultFunctions = Vehicle-Metals05
+results = "Droids:Armour:30", "Droids:HitPoints:30"
 
 [R-Vehicle-Metals06]
 name = "Dense Composite Alloys Mk3"
@@ -1771,7 +1774,7 @@ iconID = IMAGE_RES_DROIDTECH
 imdName = icmolql.pie
 subgroupIconID = IMAGE_RES_GRPUPG
 requiredResearch = R-Vehicle-Metals05
-resultFunctions = Vehicle-Metals06
+results = "Droids:Armour:30", "Droids:HitPoints:30"
 
 [R-Vehicle-Metals07]
 name = "Superdense Composite Alloys"
@@ -1782,7 +1785,7 @@ iconID = IMAGE_RES_DROIDTECH
 imdName = icmolql.pie
 subgroupIconID = IMAGE_RES_GRPUPG
 requiredResearch = R-Struc-Research-Upgrade07,R-Vehicle-Metals06
-resultFunctions = Vehicle-Metals07
+results = "Droids:Armour:30", "Droids:HitPoints:30"
 
 [R-Vehicle-Metals08]
 name = "Superdense Composite Alloys Mk2"
@@ -1793,7 +1796,7 @@ iconID = IMAGE_RES_DROIDTECH
 imdName = icmolql.pie
 subgroupIconID = IMAGE_RES_GRPUPG
 requiredResearch = R-Vehicle-Metals07
-resultFunctions = Vehicle-Metals08
+results = "Droids:Armour:30", "Droids:HitPoints:30"
 
 [R-Vehicle-Metals09]
 name = "Superdense Composite Alloys Mk3"
@@ -1804,7 +1807,7 @@ iconID = IMAGE_RES_DROIDTECH
 imdName = icmolql.pie
 subgroupIconID = IMAGE_RES_GRPUPG
 requiredResearch = R-Vehicle-Metals08
-resultFunctions = Vehicle-Metals09
+results = "Droids:Armour:30", "Droids:HitPoints:30"
 
 [R-Wpn-Cannon-Damage04]
 name = "APFSDS Cannon Rounds"
@@ -2409,6 +2412,7 @@ imdName = blresch4.PIE
 subgroupIconID = IMAGE_RES_GRPUPG
 requiredResearch = R-Struc-Research-Upgrade03
 resultFunctions = Struc-Research-Upgrade04
+results = "ResearchPoints:30"
 
 [R-Struc-Research-Upgrade05]
 name = "Dedicated Synaptic Link Data Analysis Mk2"
@@ -2420,6 +2424,7 @@ imdName = blresch4.PIE
 subgroupIconID = IMAGE_RES_GRPUPG
 requiredResearch = R-Struc-Research-Upgrade04
 resultFunctions = Struc-Research-Upgrade05
+results = "ResearchPoints:30"
 
 [R-Struc-Research-Upgrade06]
 name = "Dedicated Synaptic Link Data Analysis Mk3"
@@ -2431,6 +2436,7 @@ imdName = blresch4.PIE
 subgroupIconID = IMAGE_RES_GRPUPG
 requiredResearch = R-Struc-Research-Upgrade05
 resultFunctions = Struc-Research-Upgrade06
+results = "ResearchPoints:30"
 
 [R-Struc-Research-Upgrade07]
 name = "Neural Synapse Research Brain"
@@ -2443,6 +2449,7 @@ imdName = blresch4.PIE
 subgroupIconID = IMAGE_RES_GRPUPG
 requiredResearch = R-Struc-Research-Upgrade06
 resultFunctions = Struc-Research-Upgrade07
+results = "ResearchPoints:30"
 
 [R-Struc-Research-Upgrade08]
 name = "Neural Synapse Research Brain Mk2"
@@ -2454,6 +2461,7 @@ imdName = blresch4.PIE
 subgroupIconID = IMAGE_RES_GRPUPG
 requiredResearch = R-Struc-Research-Upgrade07
 resultFunctions = Struc-Research-Upgrade08
+results = "ResearchPoints:30"
 
 [R-Struc-Research-Upgrade09]
 name = "Neural Synapse Research Brain Mk3"
@@ -2465,6 +2473,7 @@ imdName = blresch4.PIE
 subgroupIconID = IMAGE_RES_GRPUPG
 requiredResearch = R-Struc-Research-Upgrade08
 resultFunctions = Struc-Research-Upgrade09
+results = "ResearchPoints:30"
 
 [R-Struc-RprFac-Upgrade04]
 name = "Robotic Repair Facility"
@@ -2582,7 +2591,7 @@ iconID = IMAGE_RES_DROIDTECH
 imdName = iceng.pie
 subgroupIconID = IMAGE_RES_GRPUPG
 requiredResearch = R-Vehicle-Engine03,R-Struc-Research-Upgrade04
-resultFunctions = Vehicle-Engine04
+results = "Droids:Power:5"
 
 [R-Vehicle-Engine05]
 name = "Turbo-Charged Engine Mk2"
@@ -2593,7 +2602,7 @@ iconID = IMAGE_RES_DROIDTECH
 imdName = iceng.pie
 subgroupIconID = IMAGE_RES_GRPUPG
 requiredResearch = R-Vehicle-Engine04
-resultFunctions = Vehicle-Engine05
+results = "Droids:Power:5"
 
 [R-Vehicle-Engine06]
 name = "Turbo-Charged Engine Mk3"
@@ -2604,7 +2613,7 @@ iconID = IMAGE_RES_DROIDTECH
 imdName = iceng.pie
 subgroupIconID = IMAGE_RES_GRPUPG
 requiredResearch = R-Vehicle-Engine05
-resultFunctions = Vehicle-Engine06
+results = "Droids:Power:5"
 
 [R-Vehicle-Engine07]
 name = "Gas Turbine Engine"
@@ -2615,7 +2624,7 @@ iconID = IMAGE_RES_DROIDTECH
 imdName = iceng.pie
 subgroupIconID = IMAGE_RES_GRPUPG
 requiredResearch = R-Vehicle-Engine06,R-Vehicle-Prop-VTOL,R-Vehicle-Metals07
-resultFunctions = Vehicle-Engine07
+results = "Droids:Power:5"
 
 [R-Vehicle-Engine08]
 name = "Gas Turbine Engine Mk2"
@@ -2626,7 +2635,7 @@ iconID = IMAGE_RES_DROIDTECH
 imdName = iceng.pie
 subgroupIconID = IMAGE_RES_GRPUPG
 requiredResearch = R-Vehicle-Body07,R-Vehicle-Engine07
-resultFunctions = Vehicle-Engine08
+results = "Droids:Power:5"
 
 [R-Vehicle-Engine09]
 name = "Gas Turbine Engine Mk3"
@@ -2637,7 +2646,7 @@ iconID = IMAGE_RES_DROIDTECH
 imdName = iceng.pie
 subgroupIconID = IMAGE_RES_GRPUPG
 requiredResearch = R-Vehicle-Engine08,R-Vehicle-Body10
-resultFunctions = Vehicle-Engine09
+results = "Droids:Power:5"
 
 [R-Wpn-AAGun-Accuracy01]
 name = "AA Thermal Imaging Sensor"
@@ -3470,7 +3479,7 @@ iconID = IMAGE_RES_DROIDTECH
 imdName = icamrhot.pie
 subgroupIconID = IMAGE_RES_GRPUPG
 requiredResearch = R-Vehicle-Metals03
-resultFunctions = Vehicle-Armor-Heat01
+results = "Droids:Thermal:40"
 
 [R-Vehicle-Armor-Heat02]
 name = "Thermal Armor Mk2"
@@ -3481,7 +3490,7 @@ iconID = IMAGE_RES_DROIDTECH
 imdName = icamrhot.pie
 subgroupIconID = IMAGE_RES_GRPUPG
 requiredResearch = R-Vehicle-Armor-Heat01
-resultFunctions = Vehicle-Armor-Heat02
+results = "Droids:Thermal:40"
 
 [R-Vehicle-Armor-Heat03]
 name = "Thermal Armor Mk3"
@@ -3492,7 +3501,7 @@ iconID = IMAGE_RES_DROIDTECH
 imdName = icamrhot.pie
 subgroupIconID = IMAGE_RES_GRPUPG
 requiredResearch = R-Vehicle-Armor-Heat02
-resultFunctions = Vehicle-Armor-Heat03
+results = "Droids:Thermal:40"
 
 [R-Defense-MassDriver]
 name = "Mass Driver Fortress"
@@ -3523,7 +3532,7 @@ iconID = IMAGE_RES_DROIDTECH
 imdName = icamrhot.pie
 subgroupIconID = IMAGE_RES_GRPUPG
 requiredResearch = R-Vehicle-Armor-Heat03,R-Vehicle-Metals06
-resultFunctions = Vehicle-Armor-Heat04
+results = "Droids:Thermal:40"
 
 [R-Vehicle-Armor-Heat05]
 name = "High Intensity Thermal Armor Mk2"
@@ -3534,7 +3543,7 @@ iconID = IMAGE_RES_DROIDTECH
 imdName = icamrhot.pie
 subgroupIconID = IMAGE_RES_GRPUPG
 requiredResearch = R-Vehicle-Armor-Heat04
-resultFunctions = Vehicle-Armor-Heat05
+results = "Droids:Thermal:40"
 
 [R-Vehicle-Armor-Heat06]
 name = "High Intensity Thermal Armor Mk3"
@@ -3545,7 +3554,7 @@ iconID = IMAGE_RES_DROIDTECH
 imdName = icamrhot.pie
 subgroupIconID = IMAGE_RES_GRPUPG
 requiredResearch = R-Vehicle-Armor-Heat05
-resultFunctions = Vehicle-Armor-Heat06
+results = "Droids:Thermal:40"
 
 [R-Cyborg-Armor-Heat01]
 name = "Cyborg Thermal Armor"
@@ -3556,7 +3565,7 @@ iconID = IMAGE_RES_CYBORGTECH
 imdName = icamrhot.pie
 subgroupIconID = IMAGE_RES_GRPUPG
 requiredResearch = R-Cyborg-Metals03
-resultFunctions = Cyborg-Armor-Heat01
+results = "Cyborgs:Thermal:45"
 
 [R-Cyborg-Armor-Heat02]
 name = "Cyborg Thermal Armor Mk2"
@@ -3567,7 +3576,7 @@ iconID = IMAGE_RES_CYBORGTECH
 imdName = icamrhot.pie
 subgroupIconID = IMAGE_RES_GRPUPG
 requiredResearch = R-Cyborg-Armor-Heat01
-resultFunctions = Cyborg-Armor-Heat02
+results = "Cyborgs:Thermal:45"
 
 [R-Cyborg-Armor-Heat03]
 name = "Cyborg Thermal Armor Mk3"
@@ -3578,7 +3587,7 @@ iconID = IMAGE_RES_CYBORGTECH
 imdName = icamrhot.pie
 subgroupIconID = IMAGE_RES_GRPUPG
 requiredResearch = R-Cyborg-Armor-Heat02
-resultFunctions = Cyborg-Armor-Heat03
+results = "Cyborgs:Thermal:45"
 
 [R-Cyborg-Armor-Heat04]
 name = "Cyborg High Intensity Thermal Armor"
@@ -3589,7 +3598,7 @@ iconID = IMAGE_RES_CYBORGTECH
 imdName = icamrhot.pie
 subgroupIconID = IMAGE_RES_GRPUPG
 requiredResearch = R-Cyborg-Armor-Heat03,R-Cyborg-Metals06
-resultFunctions = Cyborg-Armor-Heat04
+results = "Cyborgs:Thermal:45"
 
 [R-Cyborg-Armor-Heat05]
 name = "Cyborg High Intensity Thermal Armor Mk2"
@@ -3600,7 +3609,7 @@ iconID = IMAGE_RES_CYBORGTECH
 imdName = icamrhot.pie
 subgroupIconID = IMAGE_RES_GRPUPG
 requiredResearch = R-Cyborg-Armor-Heat04
-resultFunctions = Cyborg-Armor-Heat05
+results = "Cyborgs:Thermal:45"
 
 [R-Cyborg-Armor-Heat06]
 name = "Cyborg High Intensity Thermal Armor Mk3"
@@ -3611,7 +3620,7 @@ iconID = IMAGE_RES_CYBORGTECH
 imdName = icamrhot.pie
 subgroupIconID = IMAGE_RES_GRPUPG
 requiredResearch = R-Cyborg-Armor-Heat05
-resultFunctions = Cyborg-Armor-Heat06
+results = "Cyborgs:Thermal:45"
 
 [R-Wpn-Bomb-Accuracy01]
 name = "HE Bomb Shells"
