Upgrades: Implement production upgrades and base values.

--- a/data/mp/stats/research.ini
+++ b/data/mp/stats/research.ini
@@ -1178,7 +1178,7 @@ iconID = IMAGE_RES_STRUCTURETECH
 imdName = BLFACT1.PIE
 subgroupIconID = IMAGE_RES_GRPUPG
 requiredResearch = R-Struc-Factory-Module
-resultFunctions = Struc-Factory-Upgrade02,Struc-Factory-Cyborg-Upgrade02,Struc-VTOLFactory-Upgrade01
+results = "ProductionPoints:30"
 
 [R-Cyborg-Metals01]
 name = "Cyborg Composite Alloys"
@@ -2239,7 +2239,7 @@ iconID = IMAGE_RES_STRUCTURETECH
 imdName = BLFACT1.PIE
 subgroupIconID = IMAGE_RES_GRPUPG
 requiredResearch = R-Struc-Factory-Upgrade01,R-Struc-Research-Upgrade03
-resultFunctions = Struc-Factory-Upgrade04,Struc-Factory-Cyborg-Upgrade04,Struc-VTOLFactory-Upgrade04
+results = "ProductionPoints:30"
 
 [R-Struc-VTOLPad-Upgrade01]
 name = "Automated VTOL Rearming"
@@ -4149,7 +4149,7 @@ iconID = IMAGE_RES_STRUCTURETECH
 imdName = BLFACT1.PIE
 subgroupIconID = IMAGE_RES_GRPUPG
 requiredResearch = R-Struc-Factory-Upgrade04,R-Sys-Engineering03
-resultFunctions = Struc-Factory-Upgrade06,Struc-Factory-Cyborg-Upgrade06,Struc-VTOLFactory-Upgrade05
+results = "ProductionPoints:30"
 
 [R-Struc-Factory-Upgrade09]
 name = "Self-Replicating Manufacturing"
@@ -4160,7 +4160,7 @@ iconID = IMAGE_RES_STRUCTURETECH
 imdName = BLFACT1.PIE
 subgroupIconID = IMAGE_RES_GRPUPG
 requiredResearch = R-Struc-Factory-Upgrade07
-resultFunctions = Struc-Factory-Upgrade08,Struc-Factory-Cyborg-Upgrade08,Struc-VTOLFactory-Upgrade06
+results = "ProductionPoints:30"
 
 [R-Wpn-MortarEMP]
 name = "EMP Mortar"
