--- a/data/mp/stats/structure.ini
+++ b/data/mp/stats/structure.ini
@@ -80,7 +80,6 @@ structureModel = BLBRBFAC.PIE
 type = FACTORY
 sensorID = ZNULLSENSOR
 resistance = 150
-functions = BaBaFacProd
 ecmID = ZNULLECM
 productionPoints = 10
 
@@ -341,7 +340,6 @@ baseModel = blbcfact.pie
 type = CYBORG FACTORY
 sensorID = DefaultSensor1Mk1
 resistance = 150
-functions = FacProd1
 ecmID = ZNULLECM
 productionPoints = 10
 
@@ -359,7 +357,6 @@ structureModel = blfact1.pie
 type = FACTORY MODULE
 sensorID = DefaultSensor1Mk1
 resistance = 150
-functions = FacMod1
 ecmID = ZNULLECM
 productionPoints = 10
 
@@ -443,8 +440,8 @@ baseModel = blbfact.pie
 type = FACTORY
 sensorID = BaBaSensor
 resistance = 150
-functions = FacProd1
 ecmID = ZNULLECM
+productionPoints = 10
 
 [A0PowerGenerator]
 name = "Power Generator"
@@ -601,8 +598,8 @@ baseModel = blbfact.pie
 type = VTOL FACTORY
 sensorID = DefaultSensor1Mk1
 resistance = 150
-functions = FacProd1
 ecmID = ZNULLECM
+productionPoints = 10
 
 [A0VtolPad]
 name = "VTOL Rearming Pad"
