Upgrades: Convert power upgrades. Also, all 'Power' settings in ini files and savegames and config file are now obsoleted by 'PowerLevel', which is sensibly 0..2 rather than fixed, arbitrary, meaningless values.

--- a/data/mp/stats/research.ini
+++ b/data/mp/stats/research.ini
@@ -384,7 +384,7 @@ iconID = IMAGE_RES_POWERTECH
 statID = A0PowMod1
 requiredResearch = R-Vehicle-Engine01
 resultStructures = A0PowMod1
-resultFunctions = Struc-PowerModuleMk1
+results = "PowerPoints:25"
 
 [R-Vehicle-Body01]
 name = "Light Body - Viper"
@@ -2384,7 +2384,7 @@ iconID = IMAGE_RES_POWERTECH
 imdName = blpower4.pie
 subgroupIconID = IMAGE_RES_GRPUPG
 requiredResearch = R-Struc-Research-Upgrade04,R-Struc-PowerModuleMk1
-resultFunctions = Struc-Power Upgrade01
+results = "PowerPoints:25"
 
 [R-Struc-Power-Upgrade02]
 name = "Vapor Turbine Generator"
@@ -2396,7 +2396,7 @@ iconID = IMAGE_RES_POWERTECH
 imdName = blpower4.pie
 subgroupIconID = IMAGE_RES_GRPUPG
 requiredResearch = R-Struc-Research-Upgrade07,R-Struc-Power-Upgrade01c
-resultFunctions = Struc-Power Upgrade02
+results = "PowerPoints:25"
 
 [R-Struc-Research-Upgrade04]
 name = "Dedicated Synaptic Link Data Analysis"
@@ -3790,7 +3790,7 @@ iconID = IMAGE_RES_POWERTECH
 imdName = blpower4.pie
 subgroupIconID = IMAGE_RES_GRPUPG
 requiredResearch = R-Struc-Power-Upgrade02
-resultFunctions = Struc-Power Upgrade03
+results = "PowerPoints:25"
 
 [R-Struc-Power-Upgrade01b]
 name = "Gas Turbine Generator Mk2"
@@ -3802,7 +3802,7 @@ iconID = IMAGE_RES_POWERTECH
 imdName = blpower4.pie
 subgroupIconID = IMAGE_RES_GRPUPG
 requiredResearch = R-Struc-Power-Upgrade01
-resultFunctions = Struc-Power Upgrade01b
+results = "PowerPoints:25"
 
 [R-Struc-Power-Upgrade01c]
 name = "Gas Turbine Generator Mk3"
@@ -3814,7 +3814,7 @@ iconID = IMAGE_RES_POWERTECH
 imdName = blpower4.pie
 subgroupIconID = IMAGE_RES_GRPUPG
 requiredResearch = R-Struc-Power-Upgrade01b
-resultFunctions = Struc-Power Upgrade01c
+results = "PowerPoints:25"
 
 [R-Struc-Power-Upgrade03a]
 name = "Vapor Turbine Generator Mk3"
@@ -3826,7 +3826,7 @@ iconID = IMAGE_RES_POWERTECH
 imdName = blpower4.pie
 subgroupIconID = IMAGE_RES_GRPUPG
 requiredResearch = R-Struc-Power-Upgrade03
-resultFunctions = Struc-Power Upgrade03a
+results = "PowerPoints:25"
 
 [R-Cyborg-Hvywpn-Mcannon]
 name = "Super Heavy-Gunner"
