Upgrades: Convert repair points

--- a/data/mp/stats/research.ini
+++ b/data/mp/stats/research.ini
@@ -1331,7 +1331,7 @@ iconID = IMAGE_RES_SYSTEMTECH
 statID = A0RepairCentre3
 subgroupIconID = IMAGE_RES_GRPUPG
 requiredResearch = R-Struc-Factory-Upgrade01,R-Struc-RepairFacility
-resultFunctions = Struc-RprFac-Upgrade02
+results = "RepairPoints:50"
 
 [R-Vehicle-Prop-VTOL]
 name = "VTOL Propulsion"
@@ -2475,7 +2475,7 @@ iconID = IMAGE_RES_SYSTEMTECH
 statID = A0RepairCentre3
 subgroupIconID = IMAGE_RES_GRPUPG
 requiredResearch = R-Struc-RprFac-Upgrade01,R-Struc-Factory-Upgrade04
-resultFunctions = Struc-RprFac-Upgrade04
+results = "RepairPoints:50"
 
 [R-Struc-RprFac-Upgrade06]
 name = "Advanced Repair Facility"
@@ -2486,7 +2486,7 @@ iconID = IMAGE_RES_SYSTEMTECH
 statID = A0RepairCentre3
 subgroupIconID = IMAGE_RES_GRPUPG
 requiredResearch = R-Struc-RprFac-Upgrade04,R-Sys-Engineering03
-resultFunctions = Struc-RprFac-Upgrade06
+results = "RepairPoints:50"
 
 [R-Sys-Engineering02]
 name = "Improved Engineering"
