--- a/data/mp/stats/structure.ini
+++ b/data/mp/stats/structure.ini
@@ -492,8 +492,8 @@ baseModel = BLBGEN.PIE
 type = REPAIR FACILITY
 sensorID = DefaultSensor1Mk1
 resistance = 150
-functions = RepairFacilityFunc
 ecmID = RepairCentre
+repairPoints = 40
 
 [A0ResearchFacility]
 name = "Research Facility"
