Upgrades: Convert rearm points

--- a/data/mp/stats/research.ini
+++ b/data/mp/stats/research.ini
@@ -2251,7 +2251,7 @@ iconID = IMAGE_RES_STRUCTURETECH
 statID = A0VtolPad
 subgroupIconID = IMAGE_RES_GRPUPG
 requiredResearch = R-Struc-VTOLPad
-resultFunctions = Struc-VTOLPad-Upgrade01
+results = "RearmPoints:30"
 
 [R-Struc-VTOLPad-Upgrade02]
 name = "Automated VTOL Rearming Mk2"
@@ -2262,7 +2262,7 @@ iconID = IMAGE_RES_STRUCTURETECH
 statID = A0VtolPad
 subgroupIconID = IMAGE_RES_GRPUPG
 requiredResearch = R-Struc-VTOLPad-Upgrade01
-resultFunctions = Struc-VTOLPad-Upgrade02
+results = "RearmPoints:30"
 
 [R-Struc-VTOLPad-Upgrade03]
 name = "Automated VTOL Rearming Mk3"
@@ -2273,7 +2273,7 @@ iconID = IMAGE_RES_STRUCTURETECH
 statID = A0VtolPad
 subgroupIconID = IMAGE_RES_GRPUPG
 requiredResearch = R-Struc-VTOLPad-Upgrade02
-resultFunctions = Struc-VTOLPad-Upgrade03
+results = "RearmPoints:30"
 
 [R-Struc-VTOLPad-Upgrade04]
 name = "Robotic VTOL Rearming"
@@ -2284,7 +2284,7 @@ iconID = IMAGE_RES_STRUCTURETECH
 statID = A0VtolPad
 subgroupIconID = IMAGE_RES_GRPUPG
 requiredResearch = R-Struc-VTOLPad-Upgrade03,R-Sys-Engineering02
-resultFunctions = Struc-VTOLPad-Upgrade04
+results = "RearmPoints:30"
 
 [R-Struc-VTOLPad-Upgrade05]
 name = "Robotic VTOL Rearming Mk2"
@@ -2295,7 +2295,7 @@ iconID = IMAGE_RES_STRUCTURETECH
 statID = A0VtolPad
 subgroupIconID = IMAGE_RES_GRPUPG
 requiredResearch = R-Struc-VTOLPad-Upgrade04
-resultFunctions = Struc-VTOLPad-Upgrade05
+results = "RearmPoints:30"
 
 [R-Struc-VTOLPad-Upgrade06]
 name = "Robotic VTOL Rearming Mk3"
@@ -2306,7 +2306,7 @@ iconID = IMAGE_RES_STRUCTURETECH
 statID = A0VtolPad
 subgroupIconID = IMAGE_RES_GRPUPG
 requiredResearch = R-Struc-VTOLPad-Upgrade05
-resultFunctions = Struc-VTOLPad-Upgrade06
+results = "RearmPoints:30"
 
 [R-Struc-Materials04]
 name = "Hardened Base Structure Materials"
