--- a/data/mp/stats/structure.ini
+++ b/data/mp/stats/structure.ini
@@ -612,8 +612,9 @@ baseModel = blbgen.pie
 type = REARM PAD
 sensorID = DefaultSensor1Mk1
 resistance = 150
-functions = ReArm
 ecmID = ZNULLECM
+repairPoints = 10
+rearmPoints = 100
 
 [AASite-QuadBof]
 name = "AA Flak Cannon Emplacement"
