Upgrades: Convert structure and wall upgrades to new system

--- a/data/mp/stats/research.ini
+++ b/data/mp/stats/research.ini
@@ -726,7 +726,7 @@ iconID = IMAGE_RES_DEFENCE
 imdName = BLWALLH.PIE
 subgroupIconID = IMAGE_RES_GRPUPG
 requiredResearch = R-Defense-HardcreteWall
-resultFunctions = Defense-WallUpgrade01
+results = "Wall:Armour:30", "Wall:HitPoints:30"
 
 [R-Struc-CommandRelay]
 name = "Command Relay Post"
@@ -1053,7 +1053,7 @@ iconID = IMAGE_RES_DEFENCE
 imdName = BLWALLH.PIE
 subgroupIconID = IMAGE_RES_GRPUPG
 requiredResearch = R-Defense-WallUpgrade01
-resultFunctions = Defense-WallUpgrade02
+results = "Wall:Armour:30", "Wall:HitPoints:30"
 
 [R-Defense-WallUpgrade03]
 name = "Improved Hardcrete Mk3"
@@ -1064,7 +1064,7 @@ iconID = IMAGE_RES_DEFENCE
 imdName = BLWALLH.PIE
 subgroupIconID = IMAGE_RES_GRPUPG
 requiredResearch = R-Defense-WallUpgrade02
-resultFunctions = Defense-WallUpgrade03
+results = "Wall:Armour:30", "Wall:HitPoints:30"
 
 [R-Struc-Materials01]
 name = "Reinforced Base Structure Materials"
@@ -1075,7 +1075,7 @@ iconID = IMAGE_RES_STRUCTURETECH
 imdName = icmolql.pie
 subgroupIconID = IMAGE_RES_GRPUPG
 requiredResearch = R-Defense-WallUpgrade01
-resultFunctions = Struc-Materials01
+results = "Structure:Armour:30", "Structure:HitPoints:30"
 
 [R-Struc-Materials02]
 name = "Reinforced Base Structure Materials Mk2"
@@ -1086,7 +1086,7 @@ iconID = IMAGE_RES_STRUCTURETECH
 imdName = icmolql.pie
 subgroupIconID = IMAGE_RES_GRPUPG
 requiredResearch = R-Struc-Materials01
-resultFunctions = Struc-Materials02
+results = "Structure:Armour:30", "Structure:HitPoints:30"
 
 [R-Struc-Materials03]
 name = "Reinforced Base Structure Materials Mk3"
@@ -1097,7 +1097,7 @@ iconID = IMAGE_RES_STRUCTURETECH
 imdName = icmolql.pie
 subgroupIconID = IMAGE_RES_GRPUPG
 requiredResearch = R-Struc-Materials02
-resultFunctions = Struc-Materials03
+results = "Structure:Armour:30", "Structure:HitPoints:30"
 
 [R-Vehicle-Metals01]
 name = "Composite Alloys"
@@ -2172,7 +2172,7 @@ iconID = IMAGE_RES_DEFENCE
 imdName = BLWALLH.PIE
 subgroupIconID = IMAGE_RES_GRPUPG
 requiredResearch = R-Sys-Engineering02,R-Struc-Research-Upgrade04,R-Defense-WallUpgrade03
-resultFunctions = Defense-WallUpgrade04
+results = "Wall:Armour:30", "Wall:HitPoints:30"
 
 [R-Defense-WallUpgrade05]
 name = "Supercrete Mk2"
@@ -2183,7 +2183,7 @@ iconID = IMAGE_RES_DEFENCE
 imdName = BLWALLH.PIE
 subgroupIconID = IMAGE_RES_GRPUPG
 requiredResearch = R-Defense-WallUpgrade04
-resultFunctions = Defense-WallUpgrade05
+results = "Wall:Armour:30", "Wall:HitPoints:30"
 
 [R-Defense-WallUpgrade06]
 name = "Supercrete Mk3"
@@ -2194,7 +2194,7 @@ iconID = IMAGE_RES_DEFENCE
 imdName = BLWALLH.PIE
 subgroupIconID = IMAGE_RES_GRPUPG
 requiredResearch = R-Defense-WallUpgrade05
-resultFunctions = Defense-WallUpgrade06
+results = "Wall:Armour:30", "Wall:HitPoints:30"
 
 [R-Defense-WallUpgrade07]
 name = "Plascrete"
@@ -2205,7 +2205,7 @@ iconID = IMAGE_RES_DEFENCE
 imdName = BLWALLH.PIE
 subgroupIconID = IMAGE_RES_GRPUPG
 requiredResearch = R-Defense-WallUpgrade06,R-Sys-Engineering03
-resultFunctions = Defense-WallUpgrade07
+results = "Wall:Armour:30", "Wall:HitPoints:30"
 
 [R-Defense-WallUpgrade08]
 name = "Plascrete Mk2"
@@ -2216,7 +2216,7 @@ iconID = IMAGE_RES_DEFENCE
 imdName = BLWALLH.PIE
 subgroupIconID = IMAGE_RES_GRPUPG
 requiredResearch = R-Defense-WallUpgrade07
-resultFunctions = Defense-WallUpgrade08
+results = "Wall:Armour:30", "Wall:HitPoints:30"
 
 [R-Defense-WallUpgrade09]
 name = "Plascrete Mk3"
@@ -2227,7 +2227,7 @@ iconID = IMAGE_RES_DEFENCE
 imdName = BLWALLH.PIE
 subgroupIconID = IMAGE_RES_GRPUPG
 requiredResearch = R-Defense-WallUpgrade08
-resultFunctions = Defense-WallUpgrade09
+results = "Wall:Armour:30", "Wall:HitPoints:30"
 
 [R-Struc-Factory-Upgrade04]
 name = "Robotic Manufacturing"
@@ -2317,7 +2317,7 @@ iconID = IMAGE_RES_STRUCTURETECH
 imdName = icmolql.pie
 subgroupIconID = IMAGE_RES_GRPUPG
 requiredResearch = R-Defense-WallUpgrade04,R-Struc-Materials03
-resultFunctions = Struc-Materials04
+results = "Structure:Armour:30", "Structure:HitPoints:30"
 
 [R-Struc-Materials05]
 name = "Hardened Base Structure Materials Mk2"
@@ -2328,7 +2328,7 @@ iconID = IMAGE_RES_STRUCTURETECH
 imdName = icmolql.pie
 subgroupIconID = IMAGE_RES_GRPUPG
 requiredResearch = R-Struc-Materials04
-resultFunctions = Struc-Materials05
+results = "Structure:Armour:30", "Structure:HitPoints:30"
 
 [R-Struc-Materials06]
 name = "Hardened Base Structure Materials Mk3"
@@ -2339,7 +2339,7 @@ iconID = IMAGE_RES_STRUCTURETECH
 imdName = icmolql.pie
 subgroupIconID = IMAGE_RES_GRPUPG
 requiredResearch = R-Struc-Materials05
-resultFunctions = Struc-Materials06
+results = "Structure:Armour:30", "Structure:HitPoints:30"
 
 [R-Struc-Materials07]
 name = "Advanced Base Structure Materials"
@@ -2350,7 +2350,7 @@ iconID = IMAGE_RES_STRUCTURETECH
 imdName = icmolql.pie
 subgroupIconID = IMAGE_RES_GRPUPG
 requiredResearch = R-Defense-WallUpgrade07,R-Struc-Materials06
-resultFunctions = Struc-Materials07
+results = "Structure:Armour:30", "Structure:HitPoints:30"
 
 [R-Struc-Materials08]
 name = "Advanced Base Structure Materials Mk2"
@@ -2361,7 +2361,7 @@ iconID = IMAGE_RES_STRUCTURETECH
 imdName = icmolql.pie
 subgroupIconID = IMAGE_RES_GRPUPG
 requiredResearch = R-Struc-Materials07
-resultFunctions = Struc-Materials08
+results = "Structure:Armour:30", "Structure:HitPoints:30"
 
 [R-Struc-Materials09]
 name = "Advanced Base Structure Materials Mk3"
@@ -2372,7 +2372,7 @@ iconID = IMAGE_RES_STRUCTURETECH
 imdName = icmolql.pie
 subgroupIconID = IMAGE_RES_GRPUPG
 requiredResearch = R-Struc-Materials08
-resultFunctions = Struc-Materials09
+results = "Structure:Armour:30", "Structure:HitPoints:30"
 
 [R-Struc-Power-Upgrade01]
 name = "Gas Turbine Generator"
@@ -3881,7 +3881,7 @@ iconID = IMAGE_RES_COMPUTERTECH
 imdName = ICCCCONS.PIE
 subgroupIconID = IMAGE_RES_GRPUPG
 requiredResearch = R-Sys-Engineering03,R-Struc-Research-Upgrade08,R-Sys-Sensor-WSTower
-resultFunctions = Sys-Resistance-Upgrade03
+results = "Structure:Resistance:300"
 
 [R-Wpn-Cannon6TwinAslt]
 name = "Twin Assault Cannon"
@@ -4060,7 +4060,7 @@ iconID = IMAGE_RES_DEFENCE
 imdName = BLWALLH.PIE
 subgroupIconID = IMAGE_RES_GRPUPG
 requiredResearch = R-Defense-WallUpgrade09
-resultFunctions = Defense-WallUpgrade10
+results = "Wall:Armour:30", "Wall:HitPoints:30"
 
 [R-Defense-WallUpgrade11]
 name = "Plasteel Mk2"
@@ -4071,7 +4071,7 @@ iconID = IMAGE_RES_DEFENCE
 imdName = BLWALLH.PIE
 subgroupIconID = IMAGE_RES_GRPUPG
 requiredResearch = R-Defense-WallUpgrade10
-resultFunctions = Defense-WallUpgrade11
+results = "Wall:Armour:30", "Wall:HitPoints:30"
 
 [R-Defense-WallUpgrade12]
 name = "Plasteel Mk3"
@@ -4082,7 +4082,7 @@ iconID = IMAGE_RES_DEFENCE
 imdName = BLWALLH.PIE
 subgroupIconID = IMAGE_RES_GRPUPG
 requiredResearch = R-Defense-WallUpgrade11
-resultFunctions = Defense-WallUpgrade12
+results = "Wall:Armour:30", "Wall:HitPoints:30"
 
 [R-Vehicle-Body13]
 name = "Heavy Body - Wyvern"
