Upgrades: Convert sensor and ECM values

--- a/data/mp/stats/research.ini
+++ b/data/mp/stats/research.ini
@@ -1233,7 +1233,7 @@ iconID = IMAGE_RES_SYSTEMTECH
 imdName = GNLSNSR1.PIE
 subgroupIconID = IMAGE_RES_GRPUPG
 requiredResearch = R-Struc-Research-Upgrade04,R-Sys-Sensor-Tower01
-resultFunctions = Sys-Sensor-Upgrade01
+results = "Sensor:Range:25"
 
 [R-Vehicle-Prop-Halftracks]
 name = "Half-tracked Propulsion"
@@ -3778,7 +3778,7 @@ iconID = IMAGE_RES_SYSTEMTECH
 imdName = GNLSNSR1.PIE
 subgroupIconID = IMAGE_RES_GRPUPG
 requiredResearch = R-Sys-Sensor-Upgrade01,R-Struc-Research-Upgrade05
-resultFunctions = Sys-Sensor-Upgrade02
+results = "Sensor:Range:15"
 
 [R-Struc-Power-Upgrade03]
 name = "Vapor Turbine Generator Mk2"
@@ -4408,7 +4408,7 @@ iconID = IMAGE_RES_SYSTEMTECH
 imdName = GNLSNSR1.PIE
 subgroupIconID = IMAGE_RES_GRPUPG
 requiredResearch = R-Sys-Sensor-Upgrade02,R-Struc-Research-Upgrade07
-resultFunctions = Sys-Sensor-Upgrade03
+results = "Sensor:Range:10"
 
 [R-Sys-RadarDetector01]
 name = "Radar Detector"
@@ -4433,3 +4433,15 @@ subgroupIconID = IMAGE_RES_GRPUPG
 requiredResearch = R-Sys-Sensor-Upgrade01
 resultStructures = ECM1PylonMk1
 resultComponents = ECM1TurretMk1
+
+[R-Sys-ECM-Upgrade02]
+name = "Electronic Countermeasures Mk2"
+researchPoints = 9500
+researchPower = 300
+keyTopic = 0
+msgName = RES_SY_SU1
+iconID = IMAGE_RES_SYSTEMTECH
+imdName = gnmecm1.pie
+subgroupIconID = IMAGE_RES_GRPUPG
+requiredResearch = R-Sys-ECM-Upgrade01,R-Sys-Sensor-Upgrade03
+result = "ECM:Range:15"
