Upgrades: Convert repair and construction upgrades. Fix wall and building hitpoint upgrades.

--- a/data/mp/stats/research.ini
+++ b/data/mp/stats/research.ini
@@ -604,7 +604,7 @@ iconID = IMAGE_RES_SYSTEMTECH
 imdName = trlcon.pie
 subgroupIconID = IMAGE_RES_GRPUPG
 resultComponents = Cyb-Bod-ComEng
-resultFunctions = Sys-Engineering-Upgrade01
+results = "Construct:ConstructorPoints:10"
 
 [R-Wpn-Cannon3Mk1]
 name = "Heavy Cannon"
@@ -2498,7 +2498,7 @@ iconID = IMAGE_RES_SYSTEMTECH
 imdName = trlcon.pie
 subgroupIconID = IMAGE_RES_GRPUPG
 requiredResearch = R-Sys-Engineering01,R-Struc-Research-Upgrade04
-resultFunctions = Sys-Engineering-Upgrade02
+results = "Construct:ConstructPoints:20"
 
 [R-Sys-Engineering03]
 name = "Advanced Engineering"
@@ -2510,7 +2510,7 @@ iconID = IMAGE_RES_SYSTEMTECH
 imdName = trlcon.pie
 subgroupIconID = IMAGE_RES_GRPUPG
 requiredResearch = R-Struc-Research-Upgrade08,R-Sys-Engineering02
-resultFunctions = Sys-Engineering-Upgrade03
+results = "Construct:ConstructPoints:20"
 
 [R-Sys-CBSensor-Turret01]
 name = "CB Turret"
