Upgrades: Convert (ie remove) wall function

--- a/data/mp/stats/structure.ini
+++ b/data/mp/stats/structure.ini
@@ -14,7 +14,6 @@
   ;sensorID = <string> ID of sensor component. Affects visibility range; can be sensor turret.
   ;resistance = <integer> Resistance points to NEXUS convert/capture weapons.
   ;weapons = <comma-separated string list> list of weapons attached to structure
-  ;functions = <comma-separated string list> list of functions
   ;ecmID = <string> ID of ECM turret (used for ECM tower)
 
 [A0ADemolishStructure]
@@ -148,7 +147,6 @@ structureModel = BLBRBWLH.PIE
 type = WALL
 sensorID = BaBaSensor
 resistance = 0
-functions = baba Wall Function
 ecmID = ZNULLECM
 
 [A0BaBaMortarPit]
@@ -267,7 +265,6 @@ baseModel = blbhq.pie
 type = HQ
 sensorID = CCSensor
 resistance = 300
-functions = Basic Wall Function
 ecmID = ZNULLECM
 
 [A0CommandCentreCO]
@@ -285,7 +282,6 @@ baseModel = blbhq.pie
 type = HQ
 sensorID = CCSensor
 resistance = 300
-functions = Basic Wall Function
 ecmID = ZNULLECM
 
 [A0CommandCentreNE]
@@ -303,7 +299,6 @@ baseModel = blbhq.pie
 type = HQ
 sensorID = CCSensor
 resistance = 300
-functions = Basic Wall Function
 ecmID = ZNULLECM
 
 [A0CommandCentreNP]
@@ -321,7 +316,6 @@ baseModel = blbhq.pie
 type = HQ
 sensorID = CCSensor
 resistance = 300
-functions = Basic Wall Function
 ecmID = ZNULLECM
 
 [A0CyborgFactory]
@@ -405,7 +399,6 @@ structureModel = blwallh.pie,blwallc1.pie,blwallh_t.pie,blwallh_l.pie
 type = WALL
 sensorID = ZNULLSENSOR
 resistance = 0
-functions = Hardcrete Wall1
 ecmID = ZNULLECM
 
 [A0LasSatCommand]
@@ -437,7 +430,7 @@ baseBreadth = 3
 structureModel = blfact0.pie,factory_module1.pie,blfact1.pie,factory_module2.pie,blfact2.pie
 baseModel = blbfact.pie
 type = FACTORY
-sensorID = BaBaSensor
+sensorID = DefaultSensor1Mk1
 resistance = 150
 ecmID = ZNULLECM
 productionPoints = 10
@@ -576,7 +569,6 @@ structureModel = MITRAP2.PIE
 type = WALL
 sensorID = ZNULLSENSOR
 resistance = 0
-functions = TankTrapFunc
 ecmID = ZNULLECM
 
 [A0VTolFactory1]
@@ -867,7 +859,6 @@ structureModel = BLWALL2.pie
 type = WALL
 sensorID = ZNULLSENSOR
 resistance = 0
-functions = Collective Wall1
 ecmID = ZNULLECM
 
 [CoolingTower]
@@ -918,7 +909,6 @@ type = DEFENSE
 sensorID = DefaultSensor1Mk1
 resistance = 150
 weapons = Howitzer-Incenediary
-functions = Basic Wall Function
 ecmID = ZNULLECM
 
 [Emplacement-Howitzer105]
@@ -936,7 +926,6 @@ type = DEFENSE
 sensorID = DefaultSensor1Mk1
 resistance = 150
 weapons = Howitzer105Mk1
-functions = Basic Wall Function
 ecmID = ZNULLECM
 
 [Emplacement-Howitzer150]
@@ -1328,7 +1317,6 @@ type = DEFENSE
 sensorID = TowerSensor
 resistance = 150
 weapons = MG3Mk1
-functions = Basic Wall Function
 ecmID = ZNULLECM
 
 [GuardTower2]
@@ -1346,7 +1334,6 @@ type = DEFENSE
 sensorID = TowerSensor
 resistance = 150
 weapons = MG2Mk1
-functions = Basic Wall Function
 ecmID = ZNULLECM
 
 [GuardTower3]
@@ -1364,7 +1351,6 @@ type = DEFENSE
 sensorID = TowerSensor
 resistance = 150
 weapons = MG3Mk1
-functions = Basic Wall Function
 ecmID = ZNULLECM
 
 [GuardTower4]
@@ -1382,7 +1368,6 @@ type = DEFENSE
 sensorID = TowerSensor
 resistance = 150
 weapons = Flame1Mk1
-functions = Basic Wall Function
 ecmID = ZNULLECM
 
 [GuardTower5]
@@ -1400,7 +1385,6 @@ type = DEFENSE
 sensorID = TowerSensor
 resistance = 150
 weapons = Rocket-LtA-T
-functions = Basic Wall Function
 ecmID = ZNULLECM
 
 [GuardTower6]
@@ -1418,7 +1402,6 @@ type = DEFENSE
 sensorID = TowerSensor
 resistance = 150
 weapons = Rocket-Pod
-functions = Basic Wall Function
 ecmID = ZNULLECM
 
 [LookOutTower]
@@ -1467,7 +1450,6 @@ structureModel = BLWALL3.pie
 type = WALL
 sensorID = ZNULLSENSOR
 resistance = 0
-functions = NEXUS Wall1
 ecmID = ZNULLECM
 
 [NuclearReactor]
@@ -1500,7 +1482,6 @@ structureModel = blmssilo.pie
 type = MISSILE SILO
 sensorID = DefaultSensor1Mk1
 resistance = 0
-functions = Basic Wall Function
 ecmID = ZNULLECM
 
 [NX-CruiseSite]
@@ -1517,7 +1498,6 @@ structureModel = blbunkms.pie
 type = DEFENSE
 sensorID = DefaultSensor1Mk1
 resistance = 0
-functions = Basic Wall Function
 ecmID = ZNULLECM
 
 [NX-Emp-MedArtMiss-Pit]
@@ -1773,7 +1753,6 @@ type = DEFENSE
 sensorID = DefaultSensor1Mk1
 resistance = 150
 weapons = MG3-Pillbox
-functions = Basic Wall Function
 ecmID = ZNULLECM
 
 [PillBox2]
@@ -1791,7 +1770,6 @@ type = DEFENSE
 sensorID = DefaultSensor1Mk1
 resistance = 150
 weapons = MG2-Pillbox
-functions = Basic Wall Function
 ecmID = ZNULLECM
 
 [PillBox3]
@@ -1809,7 +1787,6 @@ type = DEFENSE
 sensorID = DefaultSensor1Mk1
 resistance = 150
 weapons = MG3-Pillbox
-functions = Basic Wall Function
 ecmID = ZNULLECM
 
 [PillBox4]
@@ -1827,7 +1804,6 @@ type = DEFENSE
 sensorID = DefaultSensor1Mk1
 resistance = 150
 weapons = Cannon1Mk1
-functions = Basic Wall Function
 ecmID = ZNULLECM
 
 [PillBox5]
@@ -2156,7 +2132,6 @@ structureModel = miupbase.pie
 type = DEFENSE
 sensorID = UplinkSensor
 resistance = 0
-functions = Basic Wall Function
 ecmID = ZNULLECM
 
 [Wall-RotMg]
